{
    "name": "PlayerControl",
    "maps": [
        {
            "name": "PlayerAction",
            "id": "8a8b76b1-f549-4c0b-b416-2d7de958e26a",
            "actions": [
                {
                    "name": "OnJump",
                    "type": "Button",
                    "id": "226ead3b-9e3a-4822-980d-f63301d84c7f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OnMove",
                    "type": "Button",
                    "id": "f405ad3b-d858-45c4-b992-2ff228959ba3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OnFire",
                    "type": "Button",
                    "id": "110f12e4-6436-4030-8f42-c9587ae6b233",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5a6c67e7-0808-44f5-a870-b44abd3c400d",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnJump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "19bc1f3c-bb5d-4ae4-8827-9a6e0a70682a",
                    "path": "<Keyboard>/w",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "OnMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "01f01a74-dd0b-4892-bbfa-ca90f711184f",
                    "path": "<Keyboard>/a",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "OnMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5eb83bda-32ab-472c-8b45-3f9e534ab66b",
                    "path": "<Keyboard>/s",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "OnMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a930324d-99d3-416a-b39c-f92b67283ca4",
                    "path": "<Keyboard>/d",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "OnMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a6c3782a-376b-42c6-9ad2-73e20c4f1bff",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnFire",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}